--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,13 +6,52 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Главная страница</title>
+        <link rel="icon" href="assets/bank-icon.png">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="https://img.icons8.com/color/64/000000/bank.png"
+                     width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"><span class="sr-only">(current)</span> Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile">Профиль</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="bankServices">Услуги</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="container-fluid">
-            <h2>Главная страница</h2>
-            <a href="profile" class="btn btn-primary">Профиль</a>
+            <div class="row row-center">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <div class="rounded-container">
+                        <div class="title">
+                            <h2 class="title">Главная страница</h2>
+                        </div>
+                        <div>
+                            <img style="width: 100%" src="https://www.kiplinger.com/kipimages/pages/13382.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
         </div>
     </body>
 </html>
