--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,10 +30,7 @@
                         <a class="nav-link" href="user/profile">Профиль</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bankServices">Услуги</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="bankServices">Действия</a>
                     </li>
                 </ul>
             </div>
@@ -53,21 +50,21 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="https://images.unsplash.com/photo-1429138118293-355fce18e9df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80" class="d-block w-100" alt="...">
+                                            <img src="assets/ph-1.png" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>First slide label</h5>
                                                 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="https://images.unsplash.com/photo-1483169070852-cec7147941eb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1867&q=80" class="d-block w-100" alt="...">
+                                            <img src="assets/ph-2.png" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Second slide label</h5>
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="https://images.unsplash.com/photo-1494367067577-502b2c602fcc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1889&q=80" class="d-block w-100" alt="...">
+                                            <img src="assets/ph-3.png" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Third slide label</h5>
                                                 <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
