Html files fix.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,8 @@
                 <img src="https://img.icons8.com/color/64/000000/bank.png"
                      width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -27,7 +28,7 @@
                         <a class="nav-link" href="#"><span class="sr-only">(current)</span>Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="user/profile">Профиль</a>
+                        <a class="nav-link" href="profile">Профиль</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="bankServices">Действия</a>
@@ -44,7 +45,8 @@
                             <div class="bd-example">
                                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                                     <ol class="carousel-indicators">
-                                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                        <li data-target="#carouselExampleCaptions" data-slide-to="0"
+                                            class="active"></li>
                                         <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                                         <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                                     </ol>
@@ -71,11 +73,13 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                                       data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                                       data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
                                     </a>
@@ -83,11 +87,14 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">
+                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                </p>
                                 <div>
-                                    <a href="user/signIn" role="button" class="btn btn-success btn-lg">Войти</a>
-                                    <a href="user/signUp" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
+                                    <a href="profile/signIn" role="button" class="btn btn-success btn-lg">Войти</a>
+                                    <a href="profile/signUp" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
                                 </div>
                             </div>
                         </div>
