Add section client

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="profile">Профиль</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/client">Клиенты</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="bankServices">Действия</a>
                     </li>
                 </ul>
@@ -93,8 +96,8 @@
                                     <small class="text-muted">Last updated 3 mins ago</small>
                                 </p>
                                 <div>
-                                    <a href="profile/signIn" role="button" class="btn btn-success btn-lg">Войти</a>
-                                    <a href="profile/signUp" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
+                                    <a href="profile/logIn" role="button" class="btn btn-success btn-lg">Войти</a>
+                                    <a href="profile/logOut" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
                                 </div>
                             </div>
                         </div>
@@ -103,6 +106,25 @@
                 <div class="col-md-1"></div>
             </div>
         </div>
+        <footer>
+            <div style="font-size: 64px">
+                <a href="https://www.mastercard.by/ru-by.html" target="_blank">
+                    <i class="fab fa-cc-mastercard"></i>
+                </a>
+                <a href="https://cis.visa.com/ru_TJ" target="_blank">
+                    <i class="fab fa-cc-visa"></i>
+                </a>
+                <a href="https://pay.amazon.com" target="_blank">
+                    <i class="fab fa-cc-amazon-pay"></i>
+                </a>
+                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">
+                    <i class="fab fa-cc-apple-pay"></i>
+                </a>
+                <a href="https://www.paypal.com/by/home" target="_blank">
+                    <i class="fab fa-cc-paypal"></i>
+                </a>
+            </div>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
                 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
                 crossorigin="anonymous"></script>
