--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="profile">Профиль</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/client">Клиенты</a>
+                        <a class="nav-link" href="client">Клиенты</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="bankServices">Действия</a>
