--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
-    <body>
+    <body class="background-img">
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="">
                 <img src="https://img.icons8.com/color/64/000000/bank.png"
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"><span class="sr-only">(current)</span>Главная</a>
+                        <a id="scroll-top" class="nav-link"><span class="sr-only">(current)</span>Главная</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="profile">Профиль</a>
@@ -72,7 +72,8 @@
                                             <img src="assets/ph-3.png" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Third slide label</h5>
-                                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                                <p>Praesent commodo cursus magna, vel scelerisque nisl
+                                                    consectetur.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -125,14 +126,13 @@
                 </a>
             </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
                 crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
+        <script src="js/jquery-3.3.1.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
