--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -107,32 +107,32 @@
                 <div class="col-md-1"></div>
             </div>
         </div>
-        <footer>
-            <div style="font-size: 64px">
-                <a href="https://www.mastercard.by/ru-by.html" target="_blank">
-                    <i class="fab fa-cc-mastercard"></i>
-                </a>
-                <a href="https://cis.visa.com/ru_TJ" target="_blank">
-                    <i class="fab fa-cc-visa"></i>
-                </a>
-                <a href="https://pay.amazon.com" target="_blank">
-                    <i class="fab fa-cc-amazon-pay"></i>
-                </a>
-                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">
-                    <i class="fab fa-cc-apple-pay"></i>
-                </a>
-                <a href="https://www.paypal.com/by/home" target="_blank">
-                    <i class="fab fa-cc-paypal"></i>
-                </a>
-            </div>
-        </footer>
+<!--        <footer>-->
+<!--            <div style="font-size: 64px">-->
+<!--                <a href="https://www.mastercard.by/ru-by.html" target="_blank">-->
+<!--                    <i class="fab fa-cc-mastercard"></i>-->
+<!--                </a>-->
+<!--                <a href="https://cis.visa.com/ru_TJ" target="_blank">-->
+<!--                    <i class="fab fa-cc-visa"></i>-->
+<!--                </a>-->
+<!--                <a href="https://pay.amazon.com" target="_blank">-->
+<!--                    <i class="fab fa-cc-amazon-pay"></i>-->
+<!--                </a>-->
+<!--                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">-->
+<!--                    <i class="fab fa-cc-apple-pay"></i>-->
+<!--                </a>-->
+<!--                <a href="https://www.paypal.com/by/home" target="_blank">-->
+<!--                    <i class="fab fa-cc-paypal"></i>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </footer>-->
+        <script src="js/jquery-3.3.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
                 crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
-        <script src="js/jquery-3.3.1.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
