--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,19 +13,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body class="background-img">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="">
-                <img src="https://img.icons8.com/color/64/000000/bank.png"
+        <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <a class="navbar-brand scroll-top">
+                <img src="assets/bank-icon.png"
                      width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a id="scroll-top" class="nav-link"><span class="sr-only">(current)</span>Главная</a>
+                    <li class="nav-item active scroll-top">
+                        <a class="nav-link"><span class="sr-only">(current)</span>Главная</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="profile">Профиль</a>
@@ -38,7 +34,7 @@
                     </li>
                 </ul>
             </div>
-        </nav>
+        </header>
         <div class="container-fluid">
             <div class="row row-center">
                 <div class="col-md-1"></div>
